# saga-parsl-integration

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile.worker  README.md  TODO.md  kind-config.yaml  pyproject.toml
scripts/: test.py  test_local.py  test_multinode.py
scripts/saga-executor/: executor.py  test_executor.py
